--- a/NewProject.ipynb
+++ b/NewProject.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOgnsdrhuYjQByxOlV5Ickz",
+      "authorship_tag": "ABX9TyPuLqvCfwV595ElRtgcqgaz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/GayathriArunDass/TestRepo/blob/main/NewProject.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/GayathriArunDass/TestRepo/blob/Gayathri/NewProject.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -34,7 +34,7 @@
       },
       "outputs": [],
       "source": [
-        "name=\"Rithun\"\n",
+        "name=\"Rithun, Joseph James\"\n",
         "print(name)"
       ]
     }
